--- a/semana01/dia2-reto1/style.css
+++ b/semana01/dia2-reto1/style.css
@@ -1,7 +1,40 @@
 body{
   background-color: hsl(235, 18%, 26%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 main{
+  border: 1px solid green;
+  width: 600px;
+  min-width:400px;
+  display: flex;
+  border-radius: 16px;
+  overflow: hidden;
+  
+}
+.content{
+  border: 5px solid red;
+  width: 350px;
+  background-color: white;
+  padding: 28px;
+
+}
+.content h1{
+
+}
+.content p{
+  
+}
+
+.box_img{
+  border: 5px solid blue;
+  width: 300px;
+  background-image: url(./assets/images/illustration-sign-up-desktop.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
   
 }
