--- a/semana02/dia01-reto1/css/styles.css
+++ b/semana02/dia01-reto1/css/styles.css
@@ -88,3 +88,8 @@ input[type='submit']{
  padding: 16px;
  width: 100%;
 }
+
+/* input:focus{
+  background-color: gray;
+  border: 3px solid red;
+} */
