--- a/semana02/dia01-reto2/style.css
+++ b/semana02/dia01-reto2/style.css
@@ -1,113 +1,98 @@
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 /* font-family: "Plus Jakarta Sans", sans-serif; */
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-body{
-  background-color: hsl(203, 41%, 72%);
+body {
+  background-color: hsl(202, 86%, 94%);
   font-family: "Plus Jakarta Sans", sans-serif;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-main{
-  /* border: 1px solid red; */
-  width: 650px;
+
+.main {
+  border: 3px solid red;
+  width: 600px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: hsl(0, 0%, 100%);
-  border-radius: 18px;
-  gap:15px;
 }
-.content{
-  width: 50%;
+
+.box__Mortgage {
+  border: 2px solid rgb(0, 255, 115);
+  width: 300px;
+  padding: 20px;
   background-color: hsl(0, 0%, 100%);
-  border-radius: 16px;
-  padding-left: 18px;
 }
-.titulo{
+.titulo {
   display: flex;
   justify-content: space-between;
-  align-items: center; 
-
+  align-items: center;
+  justify-content: space-between;
 }
-h1{
+.titulo h1 {
   font-size: 18px;
   font-weight: 700;
-  }
-.text__clear{
+}
+.titulo p {
   font-size: 12px;
   color: hsl(200, 24%, 40%);
   text-decoration: underline;
 }
-.formulario{
-
-}
-
-.input__years{
-display: flex;
-gap: 50px;
-
-
-}
-.caja_input_years{
- 
-}
-
-.texto__morrgage{
-  font-size: 11px;
+.texto__mortgage {
+  font-size: 12px;
   color: hsl(200, 24%, 40%);
-  margin-top: 8px;
-  margin-bottom: 6px;
+  margin-top: 16px;
+  margin-bottom: 4px;
 }
-.color__inferior{
-  color: hsl(200, 24%, 40%);
+.box_amaunt{
+  border: 1px solid gray;
+  border-radius:4px ;
+  display: flex;
+  overflow: hidden;
+  color: hsl(200, 24%, 40%);  
+
+}
+.box_amaunt input{
   width: 100%;
-  height: 25px;
-  border: 1px solid;
-  
-  border-radius: 4px;
-}
-.input__moneda{
-  width: 23px;
-  height: 23px;
   border: none;
+  
+}
+.box_amaunt label{
+  width: 50px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
   background-color: hsl(202, 86%, 94%);
 }
-
-
-.box__img{
-  width: 50%;
-  height: 380px;
-  border-radius: 0px 16px 16px 40px;
-  background-color:hsl(202, 55%, 16%) ;
-  text-align: center;
-}
-.text__titulo{
-  font-size: 16px;
-  font-weight: bold;
-
-}
-
-.text__parrafo{
-  font-size: 11px;
-  font-weight: 200;
-}
-.box__tex__img{
+.box__term{
   display: flex;
-  flex-direction: column;
+  gap: 10px;
+}
+.box__repayment{
+  height: 20px;
+  border: 1px solid gray;
+  border-radius: 4px;
+  color: hsl(200, 24%, 40%);
+  font-size: 12px;
+  font-weight: bold;
+  display: flex;
   align-items: center;
-  margin-top: 80px;
-  color: white;
-  gap: 14px;
+  padding: 14px 8px;
+  margin-bottom: 8px;
+}
+.box__repayment label{
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
-img{
-  width: 120px;
- 
-}
 
+.box__img {
+  border: 2px solid rgb(64, 0, 255);
+  width: 300px;
+}
