proyecto huddle resposive terminado

--- a/semana03/dia01-reto/stile.css
+++ b/semana03/dia01-reto/stile.css
@@ -2,7 +2,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 /* font-family: "Poppins", sans-serif; */
 /* font-family: "Open Sans", sans-serif; */
+/* @media (min-width: 768px) {
 
+} */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -15,11 +17,12 @@
   padding-top: 30px;
 }
 
-body {
-}
 .header__primero {
   background-color: hsl(193, 100%, 96%);
   background-image: url(./images/bg-hero-desktop.svg);
+  @media (max-width: 768px) {
+    background-image: url(./images/bg-hero-mobile.svg);
+  }
 }
 .header {
   display: flex;
@@ -35,15 +38,21 @@ body {
   font-weight: 700;
   font-size: 16px;
   box-shadow: 2px 2px 5px 0 rgba(174, 173, 173, 0.5);
+  @media (max-width: 768px) {
+    width: 200px;
+    padding: 18px;
+  }
 }
 .main {
-  /* border: 1px solid red; */
   display: flex;
   gap: 60px;
   margin-top: 50px;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 .main__descripcion {
-  /* border: 1px solid yellow; */
   width: 50%;
   font-family: "Poppins", sans-serif;
   font-size: 42px;
@@ -51,9 +60,17 @@ body {
   flex-direction: column;
   gap: 50px;
   justify-content: center;
+  @media (max-width: 768px) {
+    width: 100%;
+    text-align: center;
+    font-size: 32px;
+  }
 }
 .main__descripcion__parrafo {
   font-size: 30px;
+  @media (max-width: 768px) {
+    font-size: 32px;
+  }
 }
 .main__descripcion__boton {
   width: 40%;
@@ -65,17 +82,26 @@ body {
   font-weight: bolder;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
+  @media (max-width: 768px) {
+    margin: auto;
+    width: 60%;
+    padding: 22px;
+  }
 }
 
 .main__box_img {
-  /* border: 1px solid green; */
   width: 50%;
+  @media (max-width: 768px) {
+  }
 }
 .main__img {
   width: 910px;
   background-size: cover;
   background-repeat: no-repeat;
   padding-bottom: 50px;
+  @media (max-width: 768px) {
+    width: 650px;
+  }
 }
 
 .box__segundo {
@@ -89,11 +115,22 @@ body {
   border-radius: 20px;
   box-shadow: 2px 5px 10px 0 rgba(174, 173, 173, 0.5);
   background-color: rgb(255, 255, 255);
+
+  @media (max-width: 768px) {
+    flex-direction: column-reverse;
+    gap: 60px;
+    width: 90%;
+  }
 }
 .box__segundo__descripcion {
   font-size: 30px;
   font-family: "Poppins", sans-serif;
   width: 50%;
+  @media (max-width: 768px) {
+    width: 80%;
+    text-align: center;
+    margin-bottom: 80px;
+  }
 }
 .box__segundo__parrofo {
   font-size: 22px;
@@ -103,10 +140,17 @@ body {
 .box__segundo__imagen {
   width: 50%;
   padding-bottom: 20px;
+  @media (max-width: 768px) {
+    text-align: center;
+    width: 100%;
+  }
 }
 
 .segundo__imagen {
   width: 700px;
+  @media (max-width: 768px) {
+    width: 400px;
+  }
 }
 
 .box__comminity__boton {
@@ -127,11 +171,14 @@ body {
   margin-top: 200px;
   width: 100%;
   height: 500px;
+
+  @media (max-width: 768px) {
+    height: 100%;
+  }
 }
 
 .box__community {
   width: 600px;
-  /* border: 1px solid red; */
   margin: auto;
   font-size: 18px;
   font-family: "Poppins", sans-serif;
@@ -146,6 +193,9 @@ body {
   top: 0;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  @media (max-width: 768px) {
+  }
 }
 .box__footer {
   display: flex;
@@ -153,12 +203,26 @@ body {
   color: hsl(193, 100%, 96%);
   font-size: 14px;
   font-family: "Open Sans", sans-serif;
+  @media (max-width: 768px) {
+    flex-direction: column;
+   
+    
+  }
+}
+.box__footer__parrafo{
+  
 }
 
 .footer__logo {
   margin-top: 150px;
   margin-bottom: 40px;
   margin-left: 140px;
+  @media (max-width: 768px) {
+    margin-top: 120px;
+    margin-bottom: 35px;
+    margin-left: 22px;
+    
+  }
 }
 .box__footer__contacto {
   display: flex;
@@ -166,12 +230,20 @@ body {
   align-items: start;
   width: 18%;
   gap: 25px;
+  @media (max-width: 768px) {
+width: 74%;
+font-size: 24px;
+
+  }
 }
 .box__footer__ubicacion {
   display: flex;
   justify-content: center;
   align-items: start;
   gap: 20px;
+  @media (max-width: 768px) {
+
+  }
 }
 .box__footer__telefono {
   display: flex;
@@ -183,6 +255,10 @@ body {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  @media (max-width: 768px) {
+    font-size: 24px;
+    margin-top: 60px;
+  }
 }
 .footer__img {
   border-radius: 50px;
@@ -195,6 +271,9 @@ body {
   justify-content: center;
   align-items: start;
   gap: 20px;
+  @media (max-width: 768px) {
+    margin-top: 60px;
+  }
 }
 
 .footer__copyright {
@@ -204,4 +283,18 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 12px;
   margin-top: 50px;
+  @media (max-width: 768px) {
+    display: flex;
+   justify-content: center;
+   align-items: center;
+   padding-bottom: 60px;
+   font-size: 18px;
+
+  }
+}
+.mobil {
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
